hara wkan